Add basic express app and json data

--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "coding-test",
   "version": "1.0.0",
   "description": "Framework for coding interview",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Anna Thomas",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
