--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "coding-test",
   "version": "1.0.0",
   "description": "Framework for coding interview",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "author": "Anna Thomas",
   "license": "ISC",
