Install nodemon and add NPM script

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node_modules/.bin/nodemon server.js",
     "start": "node server.js"
   },
   "author": "Anna Thomas",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "nodemon": "^1.17.2"
   }
 }
